# auction-fastapi-app

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  start_worker.sh
auction_project/: app.py  auction_worker.py  database.db  database.py  dependencies.py  enums.py
auction_project/models/: api_model.py  base_model.py  db_model.py
auction_project/routes/: auction_api_routes.py  auth_routes.py  moderate_routes.py
auction_project/utils/: auth_utils.py  mapping_utils.py  socket_utils.py
